Isolate default leashable mobs from logic in LeashMobService